@@ -13,6 +13,8 @@ not yet  BJH  Release 10.47.00
 
               Remove nstring.h from exported interfaces.
 
+              giftopnm: improve efficiency.
+
               pnmremap: fix loss of dithering when the map (and thus the
               output) has lower maxval than the input.  (Old code scales down
               to the new maxval before dithering).
